Creating new templates, new functions, routes and a new content for the database

--- a/src/etc/default.cfg
+++ b/src/etc/default.cfg
@@ -8,3 +8,8 @@ url = http://127.0.0.1:5000
 name = loggingapp.log
 location = var/
 level = DEBUG
+
+[user]
+username = admin
+password = secret
+secret_key= development key
